--- a/web/index.html
+++ b/web/index.html
@@ -6,28 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Devcember App</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-            <![endif]-->
+        <![endif]-->
     </head>
     <body>
         <div class="container">
             <div class="row">
-                <div id="new-comment-container" class="col-xs-6 col-xs-offset-3">
-                    TEST
+                <div id="comment-form-wrapper" class="col-xs-6 col-xs-offset-3">
                 </div>
-                <div id="comment-list" class="col-xs-6 col-xs-offset-3">
-
+                <div id="comment-list-wrapper" class="col-xs-6 col-xs-offset-3">
                 </div>
             </div>
         </div>
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-with-addons.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <script src="script.js"/>
+        <script src="script.js"></script>
     </body>
 </html>
