--- a/web/index.html
+++ b/web/index.html
@@ -27,6 +27,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-with-addons.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="consts.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
